[gd_scene load_steps=11 format=3 uid="uid://dktaehavd5vwi"]

[ext_resource type="Texture2D" uid="uid://dfeo2yqwhp80w" path="res://Assets/fondo/antena.png" id="1_chvth"]
[ext_resource type="Script" path="res://Scripts/Meta.gd" id="2_elwlp"]
[ext_resource type="AudioStream" uid="uid://ddhrn51u5cfn3" path="res://Sounds/sfx/antena_activa.ogg" id="3_h8365"]

[sub_resource type="AtlasTexture" id="AtlasTexture_agrnn"]
atlas = ExtResource("1_chvth")
region = Rect2(0, 0, 350, 950)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti6qd"]
atlas = ExtResource("1_chvth")
region = Rect2(350, 0, 350, 950)

[sub_resource type="AtlasTexture" id="AtlasTexture_b00bn"]
atlas = ExtResource("1_chvth")
region = Rect2(700, 0, 350, 950)

[sub_resource type="SpriteFrames" id="SpriteFrames_lofv4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_agrnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti6qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b00bn")
}],
"loop": true,
"name": &"meta",
"speed": 15.0
}]

[sub_resource type="Animation" id="Animation_m52ha"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.392157, 0.392157, 0.392157, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0hu8e"]
resource_name = "meta"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.392157, 0.392157, 0.392157, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_exi4c"]
_data = {
"RESET": SubResource("Animation_m52ha"),
"meta": SubResource("Animation_0hu8e")
}

[node name="Meta" type="AnimatedSprite2D"]
modulate = Color(0.392157, 0.392157, 0.392157, 1)
sprite_frames = SubResource("SpriteFrames_lofv4")
animation = &"meta"
autoplay = "meta"
frame_progress = 0.338157
script = ExtResource("2_elwlp")
nextLevel = "res://Scenes/Nivel1.tscn"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(513, 0)

[node name="AntennaPosition" type="Marker2D" parent="."]
position = Vector2(0, 100)

[node name="ExitPosition" type="Marker2D" parent="."]
position = Vector2(509, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_exi4c")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_h8365")
bus = &"SFX"

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
